# SJTU_AutoRun

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml  settings.yaml  start.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pypi-publish.yml  python-publish.yml
constants/: image_templates.py
controller/: android_controller.py  emulator.py  windows_controller.py
documents/: 使用方法.md
scripts/: main.py
sjtuautorun/: __init__.py
sjtuautorun/constants/: custom_exceptions.py  data_roots.py  image_templates.py
sjtuautorun/controller/: android_controller.py  emulator.py  run_timer.py  screen_manager.py  windows_controller.py
sjtuautorun/data/: default_settings.yaml
sjtuautorun/data/plans/: default.yaml  光体.yaml  召唤阵.yaml  宣怀大道.yaml
sjtuautorun/mygo/: __init__.py  run_plan.py
sjtuautorun/scripts/: main.py
sjtuautorun/utils/: api_image.py  function_wrapper.py  math_functions.py  new_logger.py  operator.py  update.py
utils/: api_image.py  function_wrapper.py  new_logger.py
