[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sjtuautorun"
version = "0.0.2.0"
description = "交我润"
readme = "README.md"
authors = ["cwlm_ma"]
license = "MIT"


[tool.poetry.dependencies]
python = "3.9"
pre-commit = "^3.5.0"
opencv-python = "4.5.4.60"
opencv-contrib-python = "4.5.4.60"
opencv-python-headless = "4.5.4.60"
airtest = "^1.3.1"
easyocr = "^1.7.1"
keyboard = "^0.13.5"
paddleocr = "^2.0.1"
paddlepaddle = "^2.6.0"
geopy = "^2.4.1"

[tool.poetry-version-plugin]
source = "init"


[tool.black]
line-length = 128
