[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sjtuautorun"
version = "0.3.0.2"
description = "交我润"
readme = "README.md"
authors = ["cwlm_ma"]
license = "MIT"


[tool.poetry.dependencies]
python = "3.11"
numpy = "1.26.4"
opencv-python = "4.10.0.84"
airtest = "^1.3.1"
easyocr = "^1.7.1"
geopy = "^2.4.1"

[tool.poetry-version-plugin]
source = "init"

[tool.black]
line-length = 128
